--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -5,3 +5,9 @@
   height: 100vh;
   box-sizing: border-box;
 }
+
+.codeWrapper {
+  display: flex;
+  flex-direction: row;
+  border: 2px solid greenyellow;
+}
