--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 
-.codeWrapper {
+.wrapper {
   display: flex;
   flex-direction: row;
   border: 2px solid greenyellow;
