--- a/src/pages/AppLayout/styles.module.scss
+++ b/src/pages/AppLayout/styles.module.scss
@@ -1,20 +1,5 @@
 @import "src/shared/style/color";
 
-@mixin reset($font-family, $font-size, $color) {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  @if $font-family {
-    font-family: $font-family;
-  }
-  @if $font-size {
-    font-size: $font-size;
-  }
-  @if $color {
-    color: $color;
-  }
-}
-
 @mixin flex-center($column: false) {
   display: flex;
   justify-content: center;
@@ -29,8 +14,17 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600&display=swap');
 
-*:not(.react-codemirror2 *) {
-  @include reset('Montserrat', 1rem, $dark);
+.btnDrawer{
+  display: block;
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  color: $light;
+}
+
+.link {
+  display: block;
+  padding-bottom: 15px;
 }
 
 .app {
@@ -45,12 +39,5 @@
     font-size: 1.6rem;
     text-align: center;
     color: white;
-  }
-
-  .codeWrapper {
-    display: flex;
-    flex-direction: row;
-    width: 95vw;
-    @include reset('Montserrat', 1rem, $warning);
   }
 }
