fix style theory

--- a/src/pages/QuestionsPage/styles.module.scss
+++ b/src/pages/QuestionsPage/styles.module.scss
@@ -1,5 +1,6 @@
 .card {
-  max-width: 570px;
+  width: 80vw;
+  max-width: 800px;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 
   &:hover{
@@ -9,10 +10,11 @@
 }
 
 .list {
-  max-width: 50vw;
+  width: 80%;
+  max-width: 800px;
   margin: 0 auto;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   gap: 10px;
 }
