--- a/src/pages/CodeEditorPage/styles.module.scss
+++ b/src/pages/CodeEditorPage/styles.module.scss
@@ -29,7 +29,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600&display=swap');
 
-*:not(.react-codemirror2 *) {
+.codeWrapper:not(.react-codemirror2 *) {
   @include reset('Montserrat', 1rem, $dark);
 }
 
