--- a/src/pages/AppLayout/styles.module.scss
+++ b/src/pages/AppLayout/styles.module.scss
@@ -11,6 +11,11 @@
     }
   }
 }
+html, body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; /* рекомендуется для учета границ и отступов в ширине элемента */
+}
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600&display=swap');
 
