--- a/src/pages/QuestionsPage/styles.module.scss
+++ b/src/pages/QuestionsPage/styles.module.scss
@@ -2,6 +2,7 @@
   width: 80vw;
   max-width: 800px;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  font-size: 16px;
 
   &:hover{
     transform: scale(1.05);
